four cols images

--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -42,6 +42,9 @@
       .sm-hidden {
         display: none !important
       }
+      .sm-w-300px {
+        width: 300px !important
+      }
       .sm-w-full {
         width: 100% !important
       }
@@ -53,10 +56,10 @@
     <div style="font-family: Arial, sans-serif">
       <table align="center" style="margin: 0 auto" cellpadding="0" cellspacing="0" role="none">
         <tr>
-          <td style="width: 650px; max-width: 100%">
-            <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+          <td width="650" align="center" style="width: 650px; max-width: 100%">
+            <table style="width: 612px; max-width: 100%" cellpadding="0" cellspacing="0" role="none">
               <tr>
-                <td bgcolor="#ffffff" style="background-color: #FFFFFF; padding: 12px 19px">
+                <td bgcolor="#ffffff" style="background-color: #FFFFFF; padding-top: 12px; padding-bottom: 12px">
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td>
@@ -157,6 +160,74 @@
                       <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-bottom-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                       <td>&nbsp;</td>
                       <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-bottom-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                    </tr>
+                  </table>
+                  <div role="separator" style="line-height: 30px">&zwj;</div>
+                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td style="padding-bottom: 16px">
+                        <h2 style="color: #11366B; margin-bottom: 0; margin-top: 0; text-align: left; font-size: 18px; line-height: 27px">
+                          Είμαστε δίπλα σας
+                        </h2>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td align="center">
+                              <table align="left" width="298" class="sm-mb-4 sm-w-300px sm-float-none" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                <tr>
+                                  <td>
+                                    <table align="left" width="141px" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tr>
+                                        <td align="center"> <a href="https://www.alpha.gr/el/idiotes/support-center/suxnes-erotiseis-gia-kartes-kai-psifiaka-portofolia?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                            <img src="images/btn-faq.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%; display: block" alt="Alpha Bank Gold Personal Banking">
+                                          </a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                    <table align="right" width="141px" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tbody>
+                                        <tr>
+                                          <td align="center"> <a href="mailto:ebankingsupport@alpha.gr" target="_blank" style="display: block">
+                                              <img src="images/btn-email.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
+                                            </a>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </table>
+                              <table align="right" width="298" class="sm-w-300px sm-float-none" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                <tr>
+                                  <td>
+                                    <table align="left" width="141px" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tr>
+                                        <td align="center"> <a href="tel:2103260000" target="_blank" style="display: block">
+                                            <img src="images/btn-phone.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
+                                          </a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                    <table align="right" width="141px" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tbody>
+                                        <tr>
+                                          <td align="center"> <a href="https://www.alpha.gr/el/idiotes/Support-Center/sumvoules-gia-tin-asfaleia-sas?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank" style="display: block">
+                                              <img src="images/btn-security.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
+                                            </a>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </table>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
                     </tr>
                   </table>
                   <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 50px 0">&zwj;</div>
