--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -63,6 +63,37 @@ altImg: "Alpha Bank Gold Personal Banking"
 
                 <x-rounded-corners width="100%" height="auto" bgColor="#f0f3fd" topOrBottom="bottom" />
 
+                <x-spacer height="30px" />
+
+                <table class="w-full">
+                  <tr>
+                    <td class="pb-4">
+                      <h2 class="mt-0 mb-0 text-[18px] text-left leading-[27px]" style="color: {{page.primaryColor}};">
+                        Είμαστε δίπλα σας
+                      </h2>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <x-four-cols-images
+                        imagesWidth="141px"
+                        imagesHeight="121px"
+                        firstImage="btn-faq.png"
+                        firstImageLink="https://www.alpha.gr/el/idiotes/support-center/suxnes-erotiseis-gia-kartes-kai-psifiaka-portofolia"
+                        firstImageUtm="true"
+                        secondImage="btn-email.png"
+                        secondImageLink="mailto:ebankingsupport@alpha.gr"
+                        secondImageUtm="false"
+                        thirdImage="btn-phone.png"
+                        thirdImageLink="tel:2103260000"
+                        thirdImageUtm="false"
+                        fourthImage="btn-security.png"
+                        fourthImageLink="https://www.alpha.gr/el/idiotes/Support-Center/sumvoules-gia-tin-asfaleia-sas"
+                        fourthImageUtm="true"/>
+                    </td>
+                  </tr>
+                </table>
+
                 <x-divider space-y="50px" color="{{page.dividerColor}}"  />
 
                 <x-rounded-corners width="100%" height="auto" bgColor="#DAE2F9" topOrBottom="top" />
