--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -23,12 +23,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" media="screen">
   <style>
-    .hover-text-slate-700:hover {
-      color: #334155 !important
-    }
-    .hover-underline:hover {
-      text-decoration: underline !important
-    }
     @media (max-width: 650px) {
       .sm-float-none {
         float: none !important
@@ -48,18 +42,22 @@
       .sm-w-full {
         width: 100% !important
       }
+      .sm-px-4 {
+        padding-left: 16px !important;
+        padding-right: 16px !important
+      }
     }
   </style>
 </head>
 <body style="background-color: #e6e6e6; margin: 0; width: 100%; padding: 0; -webkit-font-smoothing: antialiased; word-break: break-word">
   <div role="article" aria-roledescription="email" aria-label lang="en">
-    <div style="font-family: Arial, sans-serif">
+    <div class="sm-px-4" style="font-family: Arial, sans-serif">
       <table align="center" style="margin: 0 auto" cellpadding="0" cellspacing="0" role="none">
         <tr>
-          <td width="650" align="center" style="width: 650px; max-width: 100%">
-            <table style="width: 612px; max-width: 100%" cellpadding="0" cellspacing="0" role="none">
+          <td style="width: 650px; max-width: 100%">
+            <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
               <tr>
-                <td bgcolor="#ffffff" style="background-color: #FFFFFF; padding-top: 12px; padding-bottom: 12px">
+                <td bgcolor="#ffffff" style="background-color: #FFFFFF; padding: 12px 19px">
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td>
@@ -236,29 +234,6 @@
                       <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-top-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                       <td>&nbsp;</td>
                       <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-top-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
-                    </tr>
-                  </table>
-                  <table style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
-                    <tr>
-                      <td style="padding-left: 24px; padding-right: 24px">
-                        <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&h=300&q=80" style="max-width: 100%; vertical-align: middle" alt>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td style="background-color: #DAE2F9; padding: 24px">
-                        <span style="font-size: 12px; color: #64748b">April 7, 2020</span>
-                        <h2 style="margin: 8px 0 12px; font-size: 24px; line-height: 100%">
-                          <a href="https://example.com" class="hover-text-slate-700" style="color: #000001; text-decoration: none">
-                            Lorem ipsum dolor sit amet, consectetur
-                          </a>
-                        </h2>
-                        <p style="margin: 0 0 64px; font-size: 16px; color: #64748b">
-                          Anim ullamco anim ipsum Lorem id voluptate consequat excepteur proident cillum mollit.
-                        </p>
-                        <a href="https://example.com" class="hover-underline" style="color: #3b82f6; text-decoration: none">
-                          Learn more &rarr;
-                        </a>
-                      </td>
                     </tr>
                   </table>
                   <table align="center" width="100%" style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
