fixes for outlook 120dpi

--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -17,6 +17,9 @@ altImg: "Alpha Bank Gold Personal Banking"
             <tr>
               <td bgcolor={{page.wrapperBg}} class="py-3 px-[19px] bg-alphaWhite">
                 <!-- For headerSecondLogo use 'none', 'gold', or 'bonus'-->
+
+                <x-divider space-y="50px" color="{{page.dividerColor}}"  />
+
                 <x-header headerSecondLogo="gold" />
 
                 <x-spacer height="30px" />
@@ -34,13 +37,13 @@ altImg: "Alpha Bank Gold Personal Banking"
                 <table class="w-full bg-[#f0f3fd]">
                   <tr>
                     <td class="px-6 pb-6">
-                      <h2 class="mt-0 mb-0 text-2xl text-center leading-8" style="color: {{page.primaryColor}};">
+                      <h2 class="mt-0 mb-0 text-2xl leading-8 text-center leading-8" style="color: {{page.primaryColor}};">
                         Aποκτώ το Alpha Cyber Security
                       </h2>
                     </td>
                   </tr>
                   <tr>
-                    <td class="px-6">
+                    <td class="px-5">
                       <x-two-cols-images
                         imagesWidth="276px"
                         imagesHeight="118px"
@@ -54,7 +57,7 @@ altImg: "Alpha Bank Gold Personal Banking"
                   </tr>
                   <tr>
                     <td class="px-6 pt-6">
-                      <p class="m-0 text-base text-center" style="color: {{page.primaryColor}};">
+                      <p class="m-0 text-base text-base leading-6 text-center" style="color: {{page.primaryColor}};">
                         Επιλέξτε στο μενού την ενότητα Νέα Προϊόντα > Ασφάλεια.
                       </p>
                     </td>
@@ -94,7 +97,7 @@ altImg: "Alpha Bank Gold Personal Banking"
                   </tr>
                 </table>
 
-                <x-divider space-y="50px" color="{{page.dividerColor}}"  />
+                <x-spacer height="30px" />
 
                 <x-rounded-corners width="100%" height="auto" bgColor="#DAE2F9" topOrBottom="top" />
 
