--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -60,6 +60,74 @@
                 <td bgcolor="#ffffff" style="background-color: #FFFFFF; padding: 12px 19px">
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
+                      <td style="padding-bottom: 16px">
+                        <h2 style="color: #11366B; margin-bottom: 0; margin-top: 0; text-align: left; font-size: 18px; line-height: 27px">
+                          Είμαστε δίπλα σας
+                        </h2>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td align="center">
+                              <table align="left" class="sm-mb-4 sm-w-300px sm-float-none" style="width: 298px; float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                <tr>
+                                  <td>
+                                    <table align="left" style="width: 141px; float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tr>
+                                        <td align="center"> <a href="https://www.alpha.gr/el/idiotes/support-center/suxnes-erotiseis-gia-kartes-kai-psifiaka-portofolia?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                            <img src="images/btn-faq.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%; display: block" alt="Alpha Bank Gold Personal Banking">
+                                          </a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                    <table align="right" style="width: 141px; float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tbody>
+                                        <tr>
+                                          <td align="center"> <a href="mailto:ebankingsupport@alpha.gr" target="_blank" style="display: block">
+                                              <img src="images/btn-email.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
+                                            </a>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </table>
+                              <table align="right" class="sm-w-300px sm-float-none" style="width: 298px; float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                <tr>
+                                  <td>
+                                    <table align="left" style="width: 141px; float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tr>
+                                        <td align="center"> <a href="tel:2103260000" target="_blank" style="display: block">
+                                            <img src="images/btn-phone.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
+                                          </a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                    <table align="right" style="width: 141px; float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tbody>
+                                        <tr>
+                                          <td align="center"> <a href="https://www.alpha.gr/el/idiotes/Support-Center/sumvoules-gia-tin-asfaleia-sas?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank" style="display: block">
+                                              <img src="images/btn-security.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
+                                            </a>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </table>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                  <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 50px 0">&zwj;</div>
+                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
                       <td>
                         <table align="left" width="172" class="sm-w-full sm-float-none" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
                           <tr>
@@ -118,7 +186,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td style="padding-left: 24px; padding-right: 24px">
+                      <td style="padding-left: 20px; padding-right: 20px">
                         <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                           <tr>
                             <td>
@@ -147,7 +215,7 @@
                     </tr>
                     <tr>
                       <td style="padding-left: 24px; padding-right: 24px; padding-top: 24px">
-                        <p style="color: #11366B; margin: 0; text-align: center; font-size: 16px">
+                        <p style="color: #11366B; margin: 0; text-align: center; font-size: 16px; line-height: 24px">
                           Επιλέξτε στο μενού την ενότητα Νέα Προϊόντα > Ασφάλεια.
                         </p>
                       </td>
@@ -161,74 +229,6 @@
                     </tr>
                   </table>
                   <div role="separator" style="line-height: 30px">&zwj;</div>
-                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
-                    <tr>
-                      <td style="padding-bottom: 16px">
-                        <h2 style="color: #11366B; margin-bottom: 0; margin-top: 0; text-align: left; font-size: 18px; line-height: 27px">
-                          Είμαστε δίπλα σας
-                        </h2>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
-                          <tr>
-                            <td align="center">
-                              <table align="left" width="298" class="sm-mb-4 sm-w-300px sm-float-none" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                <tr>
-                                  <td>
-                                    <table align="left" width="141px" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                      <tr>
-                                        <td align="center"> <a href="https://www.alpha.gr/el/idiotes/support-center/suxnes-erotiseis-gia-kartes-kai-psifiaka-portofolia?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
-                                            <img src="images/btn-faq.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%; display: block" alt="Alpha Bank Gold Personal Banking">
-                                          </a>
-                                        </td>
-                                      </tr>
-                                    </table>
-                                    <table align="right" width="141px" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center"> <a href="mailto:ebankingsupport@alpha.gr" target="_blank" style="display: block">
-                                              <img src="images/btn-email.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
-                                            </a>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                              </table>
-                              <table align="right" width="298" class="sm-w-300px sm-float-none" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                <tr>
-                                  <td>
-                                    <table align="left" width="141px" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                      <tr>
-                                        <td align="center"> <a href="tel:2103260000" target="_blank" style="display: block">
-                                            <img src="images/btn-phone.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
-                                          </a>
-                                        </td>
-                                      </tr>
-                                    </table>
-                                    <table align="right" width="141px" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center"> <a href="https://www.alpha.gr/el/idiotes/Support-Center/sumvoules-gia-tin-asfaleia-sas?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank" style="display: block">
-                                              <img src="images/btn-security.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
-                                            </a>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                              </table>
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
-                  <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 50px 0">&zwj;</div>
                   <table align="center" width="100%" style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-top-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
