--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -27,6 +27,10 @@
       .sm-float-none {
         float: none !important
       }
+      .sm-mx-auto {
+        margin-left: auto !important;
+        margin-right: auto !important
+      }
       .sm-mb-4 {
         margin-bottom: 16px !important
       }
@@ -58,73 +62,6 @@
             <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
               <tr>
                 <td bgcolor="#ffffff" style="background-color: #FFFFFF; padding: 12px 19px">
-                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
-                    <tr>
-                      <td style="padding-bottom: 16px">
-                        <h2 style="color: #11366B; margin-bottom: 0; margin-top: 0; text-align: left; font-size: 18px; line-height: 27px">
-                          Είμαστε δίπλα σας
-                        </h2>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
-                          <tr>
-                            <td align="center">
-                              <table align="left" class="sm-mb-4 sm-w-300px sm-float-none" style="width: 298px; float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                <tr>
-                                  <td>
-                                    <table align="left" style="width: 141px; float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                      <tr>
-                                        <td align="center"> <a href="https://www.alpha.gr/el/idiotes/support-center/suxnes-erotiseis-gia-kartes-kai-psifiaka-portofolia?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
-                                            <img src="images/btn-faq.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%; display: block" alt="Alpha Bank Gold Personal Banking">
-                                          </a>
-                                        </td>
-                                      </tr>
-                                    </table>
-                                    <table align="right" style="width: 141px; float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center"> <a href="mailto:ebankingsupport@alpha.gr" target="_blank" style="display: block">
-                                              <img src="images/btn-email.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
-                                            </a>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                              </table>
-                              <table align="right" class="sm-w-300px sm-float-none" style="width: 298px; float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                <tr>
-                                  <td>
-                                    <table align="left" style="width: 141px; float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                      <tr>
-                                        <td align="center"> <a href="tel:2103260000" target="_blank" style="display: block">
-                                            <img src="images/btn-phone.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
-                                          </a>
-                                        </td>
-                                      </tr>
-                                    </table>
-                                    <table align="right" style="width: 141px; float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
-                                      <tbody>
-                                        <tr>
-                                          <td align="center"> <a href="https://www.alpha.gr/el/idiotes/Support-Center/sumvoules-gia-tin-asfaleia-sas?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank" style="display: block">
-                                              <img src="images/btn-security.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
-                                            </a>
-                                          </td>
-                                        </tr>
-                                      </tbody>
-                                    </table>
-                                  </td>
-                                </tr>
-                              </table>
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
                   <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 50px 0">&zwj;</div>
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
@@ -229,14 +166,140 @@
                     </tr>
                   </table>
                   <div role="separator" style="line-height: 30px">&zwj;</div>
-                  <table align="center" width="100%" style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
+                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td style="padding-bottom: 16px">
+                        <h2 style="color: #11366B; margin-bottom: 0; margin-top: 0; text-align: left; font-size: 18px; line-height: 27px">
+                          Είμαστε δίπλα σας
+                        </h2>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td align="center">
+                              <table align="left" class="sm-mb-4 sm-w-300px sm-float-none" style="width: 298px; float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                <tr>
+                                  <td>
+                                    <table align="left" style="width: 141px; float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tr>
+                                        <td align="center"> <a href="https://www.alpha.gr/el/idiotes/support-center/suxnes-erotiseis-gia-kartes-kai-psifiaka-portofolia?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                            <img src="images/btn-faq.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%; display: block" alt="Alpha Bank Gold Personal Banking">
+                                          </a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                    <table align="right" style="width: 141px; float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tbody>
+                                        <tr>
+                                          <td align="center"> <a href="mailto:ebankingsupport@alpha.gr" target="_blank" style="display: block">
+                                              <img src="images/btn-email.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
+                                            </a>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </table>
+                              <table align="right" class="sm-w-300px sm-float-none" style="width: 298px; float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                <tr>
+                                  <td>
+                                    <table align="left" style="width: 141px; float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tr>
+                                        <td align="center"> <a href="tel:2103260000" target="_blank" style="display: block">
+                                            <img src="images/btn-phone.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
+                                          </a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                    <table align="right" style="width: 141px; float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                                      <tbody>
+                                        <tr>
+                                          <td align="center"> <a href="https://www.alpha.gr/el/idiotes/Support-Center/sumvoules-gia-tin-asfaleia-sas?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank" style="display: block">
+                                              <img src="images/btn-security.png" width="141" style="vertical-align: middle; width: 141px; max-height: 121px; max-width: 100%" alt="Alpha Bank Gold Personal Banking">
+                                            </a>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </table>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                  <div role="separator" style="line-height: 30px">&zwj;</div>
+                  <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 24px 0">&zwj;</div>
+                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                    <tr>
+                      <td>
+                        <table align="left" width="172" class="sm-w-full sm-float-none" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td align="center">
+                              <h2 style="color: #11366B; margin-top: 0; margin-bottom: 0; font-size: 18px; line-height: 34px">Ακολουθήστε μας</h2>
+                            </td>
+                          </tr>
+                        </table>
+                        <table class="sm-table" style="display: none; width: 100%" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td>
+                              <div role="separator" style="line-height: 20px">&zwj;</div>
+                            </td>
+                          </tr>
+                        </table>
+                        <table align="right" class="sm-mx-auto sm-float-none" style="float: right; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                          <tbody>
+                            <tr>
+                              <td align="center" style="width: 34px;">
+                                <a href="https://www.alpha.gr/el/gold/gold-personal-banking/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank" style="display: inline-block">
+                                  <img src="images/mass-linkedin.png" width="34" alt="Alpha Bank" style="vertical-align: middle; width: 34px; max-width: 100%; max-height: 34px; display: block">
+                                </a>
+                              </td>
+                              <td style="width: 16px;"></td>
+                              <td align="center" style="width: 34px;">
+                                <a href="https://www.alpha.gr/el/gold/gold-personal-banking/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank" style="display: inline-block">
+                                  <img src="images/mass-twitter.png" width="34" alt="Alpha Bank" style="vertical-align: middle; width: 34px; max-width: 100%; max-height: 34px; display: block">
+                                </a>
+                              </td>
+                              <td style="width: 16px;"></td>
+                              <td align="center" style="width: 34px;">
+                                <a href="https://www.alpha.gr/el/gold/gold-personal-banking/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank" style="display: inline-block">
+                                  <img src="images/mass-instagram.png" width="34" alt="Alpha Bank" style="vertical-align: middle; width: 34px; max-width: 100%; max-height: 34px; display: block">
+                                </a>
+                              </td>
+                              <td style="width: 16px;"></td>
+                              <td align="center" style="width: 34px;">
+                                <a href="https://www.alpha.gr/el/gold/gold-personal-banking/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank" style="display: inline-block">
+                                  <img src="images/mass-facebook.png" width="34" alt="Alpha Bank" style="vertical-align: middle; width: 34px; max-width: 100%; max-height: 34px; display: block">
+                                </a>
+                              </td>
+                              <td style="width: 16px;"></td>
+                              <td align="center" style="width: 34px;">
+                                <a href="https://www.alpha.gr/el/gold/gold-personal-banking/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank" style="display: inline-block">
+                                  <img src="images/mass-youtube.png" width="34" alt="Alpha Bank" style="vertical-align: middle; width: 34px; max-width: 100%; max-height: 34px; display: block">
+                                </a>
+                              </td>
+                              <td style="width: 16px;"></td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+                  <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 24px 0">&zwj;</div>
+                  <table align="center" width="100%" style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-top-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                       <td>&nbsp;</td>
                       <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-top-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                     </tr>
                   </table>
-                  <table align="center" width="100%" style="width: 100%; background-color: #DAE2F9" cellpadding="0" cellspacing="0" role="none">
+                  <table align="center" width="100%" style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-bottom-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                       <td>&nbsp;</td>
