--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -1,5 +1,6 @@
 ---
 wrapperBg: "#FFFFFF"
+type: "mass"
 primaryColor: "#11366B"
 textGreyColor: "#616161"
 dividerColor: "#EBEBEB"
@@ -99,34 +100,19 @@ altImg: "Alpha Bank Gold Personal Banking"
 
                 <x-spacer height="30px" />
 
-                <x-rounded-corners width="100%" height="auto" bgColor="#DAE2F9" topOrBottom="top" />
+                <x-divider top="24px" bottom="24px" color="{{page.dividerColor}}"  />
 
-<!--                <table class="w-full bg-[#DAE2F9]">-->
-<!--                  <tr>-->
-<!--                    <td class="px-6">-->
-<!--                      <img-->
-<!--                        class=""-->
-<!--                        src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&h=300&q=80"-->
-<!--                      >-->
-<!--                    </td>-->
-<!--                  </tr>-->
-<!--                  <tr>-->
-<!--                    <td class="p-6 bg-[#DAE2F9]">-->
-<!--                      <span class="text-xs text-slate-500">April 7, 2020</span>-->
-<!--                      <h2 class="m-0 mt-2 mb-3 text-2xl leading-full">-->
-<!--                        <a href="https://example.com" class="text-black hover:text-slate-700 no-underline">-->
-<!--                          Lorem ipsum dolor sit amet, consectetur-->
-<!--                        </a>-->
-<!--                      </h2>-->
-<!--                      <p class="m-0 mb-16 text-base text-slate-500">-->
-<!--                        Anim ullamco anim ipsum Lorem id voluptate consequat excepteur proident cillum mollit.-->
-<!--                      </p>-->
-<!--                      <a href="https://example.com" class="text-blue-500 no-underline hover:underline">-->
-<!--                        Learn more &rarr;-->
-<!--                      </a>-->
-<!--                    </td>-->
-<!--                  </tr>-->
-<!--                </table>-->
+                <x-follow-us
+                  linkedinLink="https://www.linkedin.com/company/alpha-bank"
+                  twitterLink="https://twitter.com/Alpha_Bank"
+                  instagramLink="https://www.instagram.com/alphabankstories/?hl=el"
+                  facebookLink="https://www.facebook.com/AlphaBankPage"
+                  youtubeLink="https://www.youtube.com/user/alphabank"
+                />
+
+                <x-divider top="24px" bottom="24px" color="{{page.dividerColor}}"  />
+
+                <x-rounded-corners width="100%" height="auto" bgColor="#DAE2F9" topOrBottom="top" />
 
                 <x-rounded-corners width="100%" height="auto" bgColor="#DAE2F9" topOrBottom="bottom" />
               </td>
