--- a/alpha-newsletters/build_production/alpha-gold.html
+++ b/alpha-newsletters/build_production/alpha-gold.html
@@ -50,6 +50,9 @@
         padding-left: 16px !important;
         padding-right: 16px !important
       }
+      .sm-text-center {
+        text-align: center !important
+      }
     }
   </style>
 </head>
@@ -62,7 +65,6 @@
             <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
               <tr>
                 <td bgcolor="#ffffff" style="background-color: #FFFFFF; padding: 12px 19px">
-                  <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 50px 0">&zwj;</div>
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td>
@@ -109,9 +111,9 @@
                   <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 50px 0">&zwj;</div>
                   <table align="center" width="100%" style="width: 100%; background-color: #f0f3fd" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-top-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                      <td width="24px" align="left" style="height: 24px; width: 24px"><img src="images/corner-top-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                       <td>&nbsp;</td>
-                      <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-top-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                      <td width="24px" align="right" style="height: 24px; width: 24px"><img src="images/corner-top-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                     </tr>
                   </table>
                   <table style="width: 100%; background-color: #f0f3fd" cellpadding="0" cellspacing="0" role="none">
@@ -160,16 +162,16 @@
                   </table>
                   <table align="center" width="100%" style="width: 100%; background-color: #f0f3fd" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-bottom-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                      <td width="24px" align="left" style="height: 24px; width: 24px"><img src="images/corner-bottom-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                       <td>&nbsp;</td>
-                      <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-bottom-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                      <td width="24px" align="right" style="height: 24px; width: 24px"><img src="images/corner-bottom-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
                     </tr>
                   </table>
                   <div role="separator" style="line-height: 30px">&zwj;</div>
                   <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
                       <td style="padding-bottom: 16px">
-                        <h2 style="color: #11366B; margin-bottom: 0; margin-top: 0; text-align: left; font-size: 18px; line-height: 27px">
+                        <h2 class="sm-text-center" style="color: #11366B; margin-bottom: 0; margin-top: 0; text-align: left; font-size: 18px; line-height: 27px">
                           Είμαστε δίπλα σας
                         </h2>
                       </td>
@@ -291,20 +293,36 @@
                     </tr>
                   </table>
                   <div role="separator" style="height: 1px; line-height: 1px; background-color: #EBEBEB; margin: 24px 0">&zwj;</div>
-                  <table align="center" width="100%" style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                  <div role="separator" style="line-height: 30px">&zwj;</div>
+                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-top-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
-                      <td>&nbsp;</td>
-                      <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-top-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                      <td style="padding-bottom: 16px">
+                        <h2 style="color: #11366B; margin-bottom: 0; margin-top: 0; text-align: left; font-size: 10px; line-height: 14px">
+                          Είμαστε δίπλα σας
+                        </h2>
+                        <p style="color: #616161; margin-top: 16px; margin-bottom: 16px; text-align: left; font-size: 10px; line-height: 14px">You have received this message from alpha@crm.alpha.gr, because you have consented to receive communications regarding new products and/or services from Alpha Bank.</p>
+                        <p style="color: #616161; margin-top: 16px; margin-bottom: 16px; text-align: left; font-size: 10px; line-height: 14px">Respecting our customer’s personal data, we inform you that, according to the General Data Protection Regulation (GDPR), you have the right to change your preference at any time. This can be done, through our website www.alpha.gr, via myAlpha Web/Mobile banking or by visiting the branch you conduct business with.</p>
+                        <p style="color: #616161; margin-top: 16px; margin-bottom: 16px; text-align: left; font-size: 10px; line-height: 14px">For security reasons, each electronic communication will include your full name/corporate name and the last two digits of your Customer Number which is unique in our systems. Alpha Bank will never ask for your passwords in any way (e.g. via phone, email). They are strictly personal and should not be disclosed to anyone.</p>
+                        <p style="color: #616161; margin-top: 16px; margin-bottom: 16px; text-align: left; font-size: 10px; line-height: 14px">Please do not answer this email. If you do not wish to receive emails from Alpha Bank, please click here.</p>
+                      </td>
                     </tr>
                   </table>
-                  <table align="center" width="100%" style="width: 100%" cellpadding="0" cellspacing="0" role="none">
+                  <table style="width: 100%" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td width="24px" align="left" style="height: 24px; width: 24px"><img src="corner-bottom-left.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
-                      <td>&nbsp;</td>
-                      <td width="24px" align="right" style="height: 24px; width: 24px"><img src="corner-bottom-right.png" width="24" height="24" style="max-width: 100%; vertical-align: middle; display: block" alt></td>
+                      <td>
+                        <table align="left" width="172" class="sm-w-full sm-float-none" style="float: left; border-style: none" cellpadding="0" cellspacing="0" role="none">
+                          <tr>
+                            <td align="center">
+                              <div role="separator" style="line-height: 10px" class="sm-hidden">&zwj;</div> <a href="https://www.alpha.gr/?utm_source=newsletter&utm_medium=CVDM&utm_campaign=alpha-welcome-gold" target="_blank">
+                                <img src="images/alpha_logo.png" width="172" alt="Alpha Bank" style="vertical-align: middle; width: 172px; max-width: 100%; max-height: 32px">
+                              </a>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
                     </tr>
                   </table>
+                  <div role="separator" style="line-height: 30px">&zwj;</div>
                 </td>
               </tr>
             </table>
