--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -9,13 +9,13 @@ altImg: "Alpha Bank Gold Personal Banking"
 ---
 
 <x-gold>
-  <div class="font-sans sm:px-4">
+  <div class="font-sans sm:px-[16px]">
     <table align="center" class="m-0 mx-auto">
       <tr>
         <td class="w-[650px] max-w-full">
           <table class="w-full">
             <tr>
-              <td bgcolor={{page.wrapperBg}} class="py-3 px-[19px] bg-alphaWhite">
+              <td bgcolor={{page.wrapperBg}} class="py-[12px] px-[19px] bg-alphaWhite">
                 <!-- For headerSecondLogo use 'none', 'gold', or 'bonus'-->
                 <x-header headerSecondLogo="{{page.type}}" />
 
