--- a/alpha-newsletters/build_production/transactional.html
+++ b/alpha-newsletters/build_production/transactional.html
@@ -68,7 +68,8 @@
                   </p>
                   <table class="hover-bg-slate-800" style="width: 100%; background-color: #020617" cellpadding="0" cellspacing="0" role="none">
                     <tr>
-                      <td align="center"> <a href="https://maizzle.com" target="_blank" style="display: inline-block">
+                      <td align="center">
+                        <a href="https://maizzle.com" target="_blank" style="display: inline-block">
                           <img src="images/{{ image }}" width="{{ btnWidth }}" height="auto" max-width="100%" border="none" max-height="{{ btnHeight }}" style="max-width: 100%; vertical-align: middle; margin-left: auto; margin-right: auto; display: block" alt>
                         </a>
                       </td>
@@ -80,7 +81,7 @@
                     <br>
                     <span style="font-weight: 600">Maizzle</span>
                   </p>
-                  <div role="separator" style="height: 1px; line-height: 1px; background-color: #cbd5e1; margin-top: 24px; margin-bottom: 24px">&zwj;</div>
+                  <div role="separator" style="height: 1px; line-height: 1px; background-color: #cbd5e1">&zwj;</div>
                   <p class="mso-break-all" style="margin: 0; font-size: 12px; line-height: 20px; color: #475569">
                     If you're having trouble clicking the "Verify email" button, copy and paste the following URL into your web browser:
                     <a href="https://maizzle.com/?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0" style="color: #1e293b; text-decoration: underline">https://maizzle.com/?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0</a>
