--- a/alpha-newsletters/emails/alpha-gold.html
+++ b/alpha-newsletters/emails/alpha-gold.html
@@ -6,6 +6,8 @@ textGreyColor: "#616161"
 dividerColor: "#EBEBEB"
 utm: alpha-welcome-gold
 altImg: "Alpha Bank Gold Personal Banking"
+
+link1: '<a href="#">lorem ipsum</a>'
 ---
 
 <x-gold>
@@ -15,17 +17,16 @@ altImg: "Alpha Bank Gold Personal Banking"
         <td class="w-[650px] max-w-full">
           <table class="w-full">
             <tr>
-              <td bgcolor={{page.wrapperBg}} class="py-[12px] px-[19px] bg-alphaWhite">
-                <!-- For headerSecondLogo use 'none', 'gold', or 'bonus'-->
+              <td bgcolor="{{page.wrapperBg}}" class="py-[12px] px-[19px] bg-alphaWhite">
                 <x-header headerSecondLogo="{{page.type}}" />
 
                 <x-spacer height="30px" />
 
-                <x-hero-image width="612px" height="511px" image="header.png" alt="{{ page.altImg }}"/>
+                <x-hero-image width="612px" height="511px" image="header.png" alt="{{page.altImg}}" />
 
                 <x-spacer height="30px" />
 
-                <x-gear gearColor="{{ page.type }}" fontSize="11px" lineHeight="14px" color="#ababab" align="right" />
+                <x-gear gearColor="{{page.type}}" fontSize="11px" lineHeight="14px" color="#ababab" align="right" />
 
                 <x-spacer height="30px" />
 
@@ -35,76 +36,122 @@ altImg: "Alpha Bank Gold Personal Banking"
                           href="https://maizzle.com"
                           image="btn.png"
                           utmActive="true"
-                          alt="{{ page.altImg }}"/>
+                          alt="{{page.altImg}}" />
 
-                <x-divider space-y="50px" color="{{page.dividerColor}}"/>
+                <x-divider space-y="50px" color="{{page.dividerColor}}" />
 
-                <!-- Rounded Corners Section -->
+                <x-icon-text url-encoded="true"
+                  bgColor=""
+                  verticalAlign="top"
+                  iconWidth="26px"
+                  iconHeight="26px"
+                  space="15px"
+                  image="check.png"
+                  alt="{{page.altImg}}"
+                  text="έως 20% έκπτωση στον με το πλήρες πακέτο καλύψεων"
+                  spaceUp="0"
+                  spaceDown="0"
+                  spaceX="0"/>
+
+                <x-divider space-y="50px" color="{{page.dividerColor}}" />
+
                 <x-rounded-corners width="100%" height="auto" bgColor="#f0f3fd" topOrBottom="top" />
 
-                <table class="w-full bg-[#f0f3fd]">
-                  <tr>
-                    <td class="px-[24px] pb-[24px]">
-                      <h2 class="mt-0 mb-0 text-[24px] leading-[32px] text-center" style="color:{{page.primaryColor}};">
-                        Aποκτώ το Alpha Cyber Security
-                      </h2>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="px-[20px]">
-                      <x-two-cols-images
-                        imagesWidth="276px"
-                        imagesHeight="118px"
-                        firstImage="by-mobile.png"
-                        firstImageLink="https://apps.apple.com/gr/app/myalpha-mobile/id378674531?l=el"
-                        firstImageUtm="true"
-                        secondImage="by-pc.png"
-                        secondImageLink="https://secure.alpha.gr/auth/ebanking/id/login?login_challenge=e793f555633042501294a32166291377&lang=el"
-                        secondImageUtm="false" />
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="px-[24px] pt-[24px]">
-                      <p class="m-0 text-base text-base leading-[24px] text-center" style="color: {{page.primaryColor}};">
-                        Επιλέξτε στο μενού την ενότητα Νέα Προϊόντα > Ασφάλεια.
-                      </p>
-                    </td>
-                  </tr>
-                </table>
+                <x-title-text
+                  text="Aποκτώ το Alpha Cyber Security"
+                  fontSize="24px"
+                  lineHeight="24px"
+                  align="center"
+                  color="{{page.primaryColor}}"
+                  bgColor="#f0f3fd"
+                  fontWeight="bold"
+                  spaceUp="0"
+                  spaceDown="0"
+                  spaceX="20px"/>
 
-                <x-rounded-corners width="100%"  height="auto" bgColor="#f0f3fd" topOrBottom="bottom" />
-                <!-- /Rounded Corners Section -->
+                <x-title-text
+                  text="Επιλέξτε στο μενού την ενότητα Νέα Προϊόντα > Ασφάλεια."
+                  fontSize="16px"
+                  lineHeight="24px"
+                  align="center"
+                  color="{{page.primaryColor}}"
+                  bgColor="#f0f3fd"
+                  fontWeight="normal"
+                  spaceUp="20px"
+                  spaceDown="20px"
+                  spaceX="20px"/>
+
+                <x-two-cols-images
+                  bgColor="#f0f3fd"
+                  spaceUp="0"
+                  spaceDown="0"
+                  spaceX="20px"
+                  imagesWidth="276px"
+                  imagesHeight="118px"
+                  firstImage="by-mobile.png"
+                  firstImageLink="https://apps.apple.com/gr/app/myalpha-mobile/id378674531?l=el"
+                  firstImageUtm="true"
+                  secondImage="by-pc.png"
+                  secondImageLink="https://secure.alpha.gr/auth/ebanking/id/login?login_challenge=e793f555633042501294a32166291377&lang=el"
+                  secondImageUtm="false" />
+
+                <x-icon-text url-encoded="true"
+                             bgColor="#f0f3fd"
+                             verticalAlign="μιδδλε"
+                             iconWidth="26px"
+                             iconHeight="26px"
+                             space="15px"
+                             image="check.png"
+                             alt="{{page.altImg}}"
+                             text="έως 20% έκπτωση στον με το πλήρες πακέτο καλύψεων"
+                             spaceUp="20px"
+                             spaceDown="0"
+                             spaceX="20px"/>
+                <x-icon-text url-encoded="true"
+                             color="#ff0000"
+                             bgColor="#f0f3fd"
+                             verticalAlign="μιδδλε"
+                             iconWidth="26px"
+                             iconHeight="26px"
+                             space="15px"
+                             image="check.png"
+                             alt="{{page.altImg}}"
+                             text="έως 20% έκπτωση στον με το πλήρες πακέτο καλύψεων"
+                             spaceUp="20px"
+                             spaceDown="0"
+                             spaceX="20px"/>
+
+
+                <x-rounded-corners width="100%" height="auto" bgColor="#f0f3fd" topOrBottom="bottom" />
 
                 <x-spacer height="30px" />
 
-                <table class="w-full">
-                  <tr>
-                    <td class="pb-[16px]">
-                      <h2 class="mt-0 mb-0 text-[18px] sm:text-center text-left leading-[27px]" style="color: {{page.primaryColor}};">
-                        Είμαστε δίπλα σας
-                      </h2>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <x-four-cols-images
-                        imagesWidth="141px"
-                        imagesHeight="121px"
-                        firstImage="btn-faq.png"
-                        firstImageLink="https://www.alpha.gr/el/idiotes/support-center/suxnes-erotiseis-gia-kartes-kai-psifiaka-portofolia"
-                        firstImageUtm="true"
-                        secondImage="btn-email.png"
-                        secondImageLink="mailto:ebankingsupport@alpha.gr"
-                        secondImageUtm="false"
-                        thirdImage="btn-phone.png"
-                        thirdImageLink="tel:2103260000"
-                        thirdImageUtm="false"
-                        fourthImage="btn-security.png"
-                        fourthImageLink="https://www.alpha.gr/el/idiotes/Support-Center/sumvoules-gia-tin-asfaleia-sas"
-                        fourthImageUtm="true" />
-                    </td>
-                  </tr>
-                </table>
+                <x-title-text
+                  text="Είμαστε δίπλα σας"
+                  fontSize="18px"
+                  lineHeight="27px"
+                  align="left"
+                  color="{{page.primaryColor}}"
+                  fontWeight="bold"
+                  spaceUp="0"
+                  spaceDown="16px"
+                  spaceX="0"/>
+
+                <x-four-cols-images
+                  imagesWidth="141px"
+                  imagesHeight="121px"
+                  firstImage="btn-faq.png"
+                  firstImageLink="https://www.alpha.gr/el/idiotes/support-center/suxnes-erotiseis-gia-kartes-kai-psifiaka-portofolia"
+                  firstImageUtm="true"
+                  secondImage="btn-email.png"
+                  secondImageLink="mailto:ebankingsupport@alpha.gr"
+                  secondImageUtm="false"
+                  thirdImage="btn-phone.png"
+                  thirdImageLink="tel:2103260000"
+                  thirdImageUtm="false"
+                  fourthImage="btn-security.png"
+                  fourthImageLink="https://www.alpha.gr/el/idiotes/Support-Center/sumvoules-gia-tin-asfaleia-sas"
+                  fourthImageUtm="true" />
 
                 <x-spacer height="30px" />
 
@@ -118,28 +165,11 @@ altImg: "Alpha Bank Gold Personal Banking"
                   facebookLink="https://www.facebook.com/AlphaBankPage"
                   youtubeLink="https://www.youtube.com/user/alphabank" />
 
-                <x-divider top="24px"bottom="24px" color="{{page.dividerColor}}" />
+                <x-divider top="24px" bottom="24px" color="{{page.dividerColor}}" />
 
                 <x-spacer height="30px" />
 
-                <table class="w-full">
-                  <tr>
-                    <td class="pb-[16px]">
-                      <h2 class="mt-0 mb-0 text-[10px] leading-[14px] text-left " style="color: {{page.primaryColor}};">
-                        Είμαστε δίπλα σας
-                      </h2>
-                      <p class="text-[10px] leading-[14px] my-4 text-left" style="color: {{page.textGreyColor}};">You have received this message from <x-email-link color="{{page.primaryColor}}" name="alpha" domain="crm.alpha" domainExt="gr"/>, because you have consented to receive communications regarding new products and/or services from Alpha Bank.</p>
-                      <p class="text-[10px] leading-[14px] my-4 text-left" style="color: {{page.textGreyColor}};">Respecting our customer’s personal data, we inform you that, according to the General Data Protection Regulation (GDPR), you have the right to change your preference at any time. This can be done, through our website www.alpha.gr, via myAlpha Web/Mobile banking or by visiting the branch you conduct business with.</p>
-                      <p class="text-[10px] leading-[14px] my-4 text-left" style="color: {{page.textGreyColor}};">For security reasons, each electronic communication will include your full name/corporate name and the last two digits of your Customer Number which is unique in our systems. Alpha Bank will never ask for your passwords in any way (e.g. via phone, email). They are strictly personal and should not be disclosed to anyone.</p>
-                      <p class="text-[10px] leading-[14px] my-4 text-left" style="color: {{page.textGreyColor}};">Please do not answer this email. If you do not wish to receive emails from Alpha Bank, please click <a href="https://apps.alpha.gr/GDPR/default.aspx" target="_blank" style="color:{{page.primaryColor}};">here</a>.</p>
-                    </td>
-                  </tr>
-                </table>
-
-                <x-header headerSecondLogo="none" />
-
                 <x-spacer height="30px" />
-
               </td>
             </tr>
           </table>
